Linked Journey page to Appl Page

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,10 @@
 /AddTrack$2.class
 /AddTrack$3.class
 /AddTrack.class
+/AddS.class
+/AddT.class
+/Application.class
+/ViewS.class
+/ViewT.class
+/website.class
+/ApplicationPage$6.class
