--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,6 @@
-/addTrackObj.class
-/AddTrack$1.class
-/AddTrack$2.class
-/AddTrack$3.class
-/AddTrack.class
-/AddS.class
-/AddT.class
-/Application.class
-/ViewS.class
-/ViewT.class
-/website.class
+/ApplicationPage$2.class
+/ApplicationPage$3.class
+/ApplicationPage$4.class
+/ApplicationPage$5.class
 /ApplicationPage$6.class
+/ApplicationPage$7.class
