--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,25 @@
+/AddStation$1.class
+/AddStation$2.class
+/AddStation$3.class
+/AddStation.class
+/AddTrack$1.class
+/AddTrack$2.class
+/AddTrack$3.class
+/AddTrack.class
+/ApplicationPage$1.class
 /ApplicationPage$2.class
 /ApplicationPage$3.class
 /ApplicationPage$4.class
 /ApplicationPage$5.class
 /ApplicationPage$6.class
 /ApplicationPage$7.class
-/DijkstrasAlgorithm.class
+/ApplicationPage.class
+/JourneyPage$1.class
+/JourneyPage$2.class
+/JourneyPage.class
+/ViewAllStations$1.class
+/ViewAllStations$2.class
+/ViewAllStations.class
+/ViewAllTracks$1.class
+/ViewAllTracks$2.class
+/ViewAllTracks.class
