--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,7 @@
 /ViewAllStations$1.class
+/ApplicationPage$2.class
+/ApplicationPage$3.class
+/ApplicationPage$4.class
+/ApplicationPage$5.class
+/ApplicationPage$6.class
+/ApplicationPage$7.class
